[gd_scene load_steps=7 format=3 uid="uid://dd7vr74jyu88o"]

[ext_resource type="Script" uid="uid://bkhj17gs7viiv" path="res://scripts/player.gd" id="1_ouy1s"]
[ext_resource type="PackedScene" uid="uid://lid8ckiv8gme" path="res://models/little.guy.blend" id="2_2pcel"]
[ext_resource type="Script" uid="uid://c8odsgwdxw4yo" path="res://models/little.guy.gd" id="3_qcvi3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_53lwv"]
radius = 0.3
height = 1.2

[sub_resource type="SphereShape3D" id="SphereShape3D_aq3ai"]
radius = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_2l7gh"]
radius = 0.75

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.752285, 0)
script = ExtResource("1_ouy1s")

[node name="Pivot" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.152385, 0)
shape = SubResource("CapsuleShape3D_53lwv")

[node name="blenderNode" parent="." instance=ExtResource("2_2pcel")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.756243, 0)
script = ExtResource("3_qcvi3")

[node name="InteractPivot" type="Node3D" parent="."]

[node name="InteractArea" type="Area3D" parent="InteractPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.08165e-12, 2.08165e-12)

[node name="InteractShape" type="CollisionShape3D" parent="InteractPivot/InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("SphereShape3D_aq3ai")

[node name="DebugInteract" type="MeshInstance3D" parent="InteractPivot/InteractArea/InteractShape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08165e-12, 0, 0)
visible = false
mesh = SubResource("SphereMesh_2l7gh")
skeleton = NodePath("../..")
